--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         }
         function setMyPosition(position){
             if(playerOldPos){
-                playerOldPos.setMap(null);
+                //playerOldPos.setMap(null);
             }
             
             
